--- a/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
@@ -4,9 +4,6 @@
     <string name="app_label">UI di sistema</string>
     <string name="status_bar_recent_inspect_item_title">Informazioni applicazione</string>
     <string name="status_bar_no_recent_apps">Nessuna applicazione recente</string>
-    <string name="status_bar_recent_guide_all">Scorri in alto per chiudere, scorri in basso per bloccare</string>
-    <string name="status_bar_recent_guide_top">Scorri in alto per chiudere</string>
-    <string name="status_bar_recent_guide_bottom">Scorri in basso per bloccare</string>
     <string name="battery_low_title">Collega il caricabatterie</string>
     <string name="battery_low_subtitle">Batteria quasi scarica.</string>
     <string name="battery_low_percent_format">%d%% rimanente</string>
@@ -38,19 +35,21 @@
     <string name="accessibility_home">Home</string>
     <string name="accessibility_menu">Menu</string>
     <string name="accessibility_recent">Applicazioni recenti</string>
-    <string name="accessibility_ime_switch_button">Pulsante per cambiare metodo di immissione.</string>
-    <string name="accessibility_compatibility_zoom_button">Pulsante zoom compatibilità.</string>
+    <string name="accessibility_search_light">Ricerca</string>
+    <string name="accessibility_camera_button">Fotocamera</string>
     <string name="accessibility_bluetooth_connected">Bluetooth collegato.</string>
     <string name="accessibility_bluetooth_disconnected">Bluetooth scollegato.</string>
     <string name="accessibility_no_phone">Nessun telefono.</string>
     <string name="accessibility_phone_one_bar">Telefono: una barra.</string>
     <string name="accessibility_phone_two_bars">Telefono: due barre.</string>
     <string name="accessibility_phone_three_bars">Telefono: tre barre.</string>
+    <string name="accessibility_phone_four_bars">Telefono: quattro barre..</string>
     <string name="accessibility_phone_signal_full">Massimo segnale telefonico.</string>
     <string name="accessibility_no_data">Nessun dato.</string>
     <string name="accessibility_data_one_bar">Dati: una barra.</string>
     <string name="accessibility_data_two_bars">Dati: due barre.</string>
     <string name="accessibility_data_three_bars">Dati: tre barre.</string>
+    <string name="accessibility_data_four_bars">Dati: quattro barre</string>
     <string name="accessibility_data_signal_full">Massimo segnale dati.</string>
     <string name="accessibility_no_wifi">Nessuna connessione Wi-Fi.</string>
     <string name="accessibility_wifi_one_bar">Wi-Fi: una barra.</string>
@@ -80,6 +79,8 @@
     <string name="data_usage_disabled_dialog_mobile_title">Dati mobili disattivati</string>
     <string name="data_usage_disabled_dialog_title">Dati disabilati</string>
     <string name="data_usage_disabled_dialog">"Hai raggiunto il limite di utilizzo dei dati specificato. Se riattivi i dati, l'operatore potrebbe addebitarti un costo."</string>
+    
+
     <string name="data_usage_disabled_dialog_enable">Riattiva dati</string>
     <string name="status_bar_settings_signal_meter_disconnected">Nessuna connessione</string>
     <string name="status_bar_settings_signal_meter_wifi_nossid">Wi-Fi connesso</string>
@@ -87,12 +88,47 @@
     <string name="gps_notification_found_text">Posizione stabilita dal GPS</string>
     <string name="accessibility_clear_all">Cancella tutte le notifiche.</string>
     <string name="status_bar_notification_inspect_item_title">Informazioni app</string>
+    <string name="status_bar_date_format">d/M,E</string>
+    <string name="status_bar_toggle_ac">Accesso</string>
+    <string name="status_bar_toggle_bluetooth">BT</string>
+    <string name="status_bar_toggle_brightness">Lumin.</string>
+    <string name="status_bar_toggle_auto_brightness">Lumin. Auto</string>
+    <string name="status_bar_toggle_data">Dati</string>
+    <string name="status_bar_toggle_divider">Altro</string>
+    <string name="status_bar_toggle_flight_mode">Aereo</string>
+    <string name="status_bar_toggle_gps">GPS</string>
+    <string name="status_bar_toggle_lock">Blocca</string>
+    <string name="status_bar_toggle_mute">Silenz.</string>
+    <string name="status_bar_toggle_network_type">Rete</string>
+    <string name="status_bar_toggle_privacy_mode">Guard</string>
+    <string name="status_bar_toggle_reboot">Riavvia</string>
+    <string name="status_bar_toggle_rotate">Rotazione</string>
+    <string name="status_bar_toggle_screen_button">Tasti</string>
+    <string name="status_bar_toggle_screenshot">Screenshot</string>
+    <string name="status_bar_toggle_shutdown">Spegni</string>
+    <string name="status_bar_toggle_sync">Sinc.</string>
+    <string name="status_bar_toggle_torch">Torcia</string>
+    <string name="status_bar_toggle_vibrate">Vibra</string>
+    <string name="status_bar_toggle_wifi">Wi-Fi</string>
+    <string name="status_bar_toggle_power_mode">Power mode</string>
+    <string name="status_bar_toggle_drive_mode">Guida</string>
+    <string name="status_bar_toggle_wifi_ap">Hospot Wi-Fi</string>
+    <string name="status_bar_toggle_quiet_mode">Anti-disturbo</string>
+    <string name="status_bar_toggle_sync_auto">Sinc.Auto</string>
+    <string name="status_bar_toggle_sync_manual">Sinc.Man.</string>
+    <string name="status_bar_toggle_syncing">Sincronizza</string>
+    <string name="screen_rotation_freeze_message">Rotazione automatica disattivata</string>
+    <string name="screen_button_disabled_message">I tasti funzione in basso sono bloccati. Puoi riabilitarli premendo \"Home\" e \"Power\"</string>
+    <string name="screen_button_enabled_message">I tasti funzione in basso sono abilitati</string>
+    <string name="status_bar_recent_guide_all">Scorri in alto per chiudere, scorri in basso per bloccare</string>
+    <string name="status_bar_recent_guide_top">Scorri in alto per chiudere</string>
+    <string name="status_bar_recent_guide_bottom">Scorri in basso per bloccare</string>
     <string name="share">Condividi</string>
     <string name="description_direction_up">Scorri su per %s.</string>
     <string name="description_direction_left">Scorri a sinistra per for %s.</string>
     <string name="description_target_search">Search</string>
-    <string name="status_bar_date_format">d MMMM, yyyy</string>
-    <string name="status_bar_recent_memory_info">%1$s / %2$s</string>
+    <string name="status_bar_recent_memory_info1">"%s "</string>
+    <string name="status_bar_recent_memory_info2">" %s disponibile"</string>
     <string name="usb_mode_notification">Archiviazione USB</string>
     <string name="usb_mode_dont_ask">Non chiedere più</string>
     <string name="usb_mode_mount_storage_title">Aprire archiviazione USB？</string>
@@ -104,8 +140,8 @@
     <string name="usb_notification_mtp_problem">Aiuto</string>
     <string name="usb_ptp_text">Foto</string>
     <string name="usb_mtp_text">File</string>
-    <string name="usb_notification_mtp_ticker_text">USB Connessa (Modalità File)</string>
-    <string name="usb_notification_ptp_ticker_text">USB Connessa (Modalità Foto)</string>
+    <string name="usb_notification_mtp_ticker_text">USB Connessa (File)</string>
+    <string name="usb_notification_ptp_ticker_text">USB Connessa (Foto)</string>
     <string name="user_guide_for_notification">Hai ricevuto una nuova notifica, trascina in basso la barra di stato per vedere i dettagli</string>
     <string name="user_guide_for_toggle">La lista comandi può essere spostata lateralmente</string>
     <string name="user_guide_for_toggle_list">Premi qui per personalizzare la lista comandi</string>
@@ -194,44 +230,6 @@
     <string name="headset_settings">Cuffie collegate</string>
     <string name="headset_info">Personalizza tasto funzioni</string>
     <string name="headset_custom">Personalizza</string>
-    <string name="audio_effect_settings">Imposta tipo di cuffie</string>
-    <string name="audio_effect_info">Ottimizza audio</string>
-    <string name="audio_effect_custom">Configura</string>
     <string name="usb_share_net_info">Utilizza la connessione Internet del computer</string>
-    <string name="status_bar_toggle_ac">Accesso</string>
-    <string name="status_bar_toggle_bluetooth">BT</string>
-    <string name="status_bar_toggle_brightness">Lumin.</string>
-    <string name="status_bar_toggle_auto_brightness">Lumin. Auto</string>
-    <string name="status_bar_toggle_data">Dati</string>
-    <string name="status_bar_toggle_divider">Altro</string>
-    <string name="status_bar_toggle_flight_mode">Aereo</string>
-    <string name="status_bar_toggle_gps">GPS</string>
-    <string name="status_bar_toggle_lock">Blocca</string>
-    <string name="status_bar_toggle_mute">Silenz.</string>
-    <string name="status_bar_toggle_network_type">Rete</string>
-    <string name="status_bar_toggle_privacy_mode">Guard</string>
-    <string name="status_bar_toggle_reboot">Riavvia</string>
-    <string name="status_bar_toggle_rotate">Rotazione</string>
-    <string name="status_bar_toggle_screen_button">Tasti</string>
-    <string name="status_bar_toggle_screenshot">Screenshot</string>
-    <string name="status_bar_toggle_shutdown">Spegni</string>
-    <string name="status_bar_toggle_sync">Sinc.</string>
-    <string name="status_bar_toggle_torch">Torcia</string>
-    <string name="status_bar_toggle_vibrate">Vibra</string>
-    <string name="status_bar_toggle_wifi">Wi-Fi</string>
-    <string name="status_bar_toggle_power_mode">Power mode</string>
-    <string name="status_bar_toggle_drive_mode">Guida</string>
-    <string name="status_bar_toggle_wifi_ap">Hospot Wi-Fi</string>
-    <string name="status_bar_toggle_quiet_mode">Anti-disturbo</string>
-    <string name="status_bar_toggle_ringtone">Suoneria</string>
-    <string name="status_bar_toggle_ring">Suona</string>
-    <string name="status_bar_toggle_sync_auto">Sinc.Auto</string>
-    <string name="status_bar_toggle_sync_manual">Sinc.Man.</string>
-    <string name="status_bar_toggle_syncing">Sincronizza</string>
-    <string name="status_bar_toggle_power_low">Risparmio</string>
-    <string name="status_bar_toggle_power_mid">Normale</string>
-    <string name="status_bar_toggle_power_high">Prestazioni</string>
-    <string name="screen_rotation_freeze_message">Rotazione automatica disattivata</string>
-    <string name="screen_button_disabled_message">I tasti funzione in basso sono bloccati. Puoi riabilitarli premendo \"Home\" e \"Power\"</string>
-    <string name="screen_button_enabled_message">I tasti funzione in basso sono abilitati</string>
+
 </resources>
