--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -9,7 +9,7 @@
     <string name="unknown_album_name">Album sconosciuto</string>
     <string name="network_error">Nessuna connessione, verificare le impostazioni di rete</string>
     <string name="lrc_search_failed">Testi non trovati</string>
-    <string name="lrc_searching">Ricerca testi...</string>
+    <string name="lrc_searching">Ricerca testi…</string>
     <string name="lyric_open_other_connect">Scarica testi utilizzando la connessione su rete mobile</string>
     <string name="playback_failed_no_title_by_bad_file">Il brano non può essere riprodotto, formato non supportato.</string>
     <string name="streamloadingtext">Connessione a %s</string>
@@ -39,8 +39,8 @@
     <string name="track_list_control_edit_rename_playlist">Rinomina</string>
     <string name="track_list_descript_cover">Copertina</string>
     <string name="search_hint">Artista, canzone o album</string>
-    <string name="buffering">Creazione buffer in corso...</string>
-    <string name="loading_hint">Caricamento in corso...</string>
+    <string name="buffering">Creazione buffer in corso…</string>
+    <string name="loading_hint">Caricamento in corso…</string>
     <string name="artist_search_title">Artista</string>
     <string name="album_search_title">Album</string>
     <string name="track_search_title">Canzone</string>
@@ -54,12 +54,12 @@
     <string name="click_to_shuffle">Riproduzione casuale</string>
     <string name="send_to_title">Invia a (%1$s)</string>
     <string name="dialog_title_add_playlist">Aggiungi alla playlist</string>
-    <string name="dialog_title_name_playlist">Nome playlist</string>
+    <string name="dialog_title_name_playlist">Titolo playlist</string>
     <string name="dialog_title_track_picker">Seleziona canzone(i)</string>
     <string name="dialog_title_remove_tracks">Rimuovi</string>
     <string name="dialog_title_delete_tracks">Elimina</string>
     <string name="dialog_button_find_music">Trova nuova musica</string>
-    <string name="dialog_button_create_playlist">Crea una Playlist</string>
+    <string name="dialog_button_create_playlist">Crea una playlist</string>
     <string name="cancel">Annulla</string>
     <string name="ok">OK</string>
     <string name="done">Fatto</string>
@@ -75,7 +75,7 @@
     <string name="function_error">Questa funzione non può essere inizializzata</string>
     <string name="music_settings">Musica</string>
     <string name="network_traffic">Traffico di rete</string>
-    <string name="allow_to_use_traffic_summary">"Non attivandolo si può avere costi elevati di traffico dati,si consiglia l'attivazione"</string>
+    <string name="allow_to_use_traffic_summary">"Non attivandolo si può avere costi elevati di traffico dati, si consiglia l'attivazione"</string>
     <string name="allow_to_use_traffic_title">"Consenti l'uso della rete Wi-Fi per ascoltare le canzoni online"</string>
     <string name="download_method">Download</string>
     <string name="download_while_playing_summary">Scarica automaticamente le canzoni che hai ascoltato online</string>
