--- a/Italian/main/Email.apk/res/values-it/strings.xml
+++ b/Italian/main/Email.apk/res/values-it/strings.xml
@@ -48,7 +48,7 @@
     <string name="account_settings_incoming_summary">Nome utente, password e altre impostazioni del server in entrata</string>
     <string name="account_settings_list_title">Seleziona i provider di posta da aggiungere:</string>
     <string name="account_settings_login_dialog_content_fmt">Il nome utente o la password per %s non sono corretti. Aggiornarli ora?</string>
-    <string name="account_settings_login_dialog_reason_fmt">Accesso a %s fallito; il server dice: %s Do you want to update your username and/or password?</string>
+    <string name="account_settings_login_dialog_reason_fmt" formatted="false">Accesso a %s fallito; il server dice: %s Do you want to update your username and/or password?</string>
     <string name="account_settings_login_dialog_title">Impossibile accedere</string>
     <string name="account_settings_mail_check_frequency_label">Frequenza di controllo Posta in arrivo</string>
     <string name="account_settings_name_label">Nome</string>
@@ -449,7 +449,6 @@
     <string name="intent_exchange_package">com.android.exchange</string>
     <string name="invalid_recipient">Indirizzo non valido.</string>
     <string name="kilobytes">%s KB</string>
-    <string name="label_notification_ticker">%s: %s</string>    
     <string name="load_more">Carica altro</string>
     <string name="loading_conversation">Caricamento…</string>
     <string name="loading_conversations">Caricamento…</string>
@@ -602,7 +601,7 @@ CC: %4$s
     <string name="permission_read_attachment_label">Lettura allegati email</string>
     <string name="phone">telefono</string>
     <string name="photo_load_failed">Non è stato possibile caricare l\'immagine</string>
-    <string name="photo_view_count">%d di %d</string>
+    <string name="photo_view_count" formatted="false">%d di %d</string>
     <string name="please_fill_in_your_mailbox_information">Inserisci i dati del tuo account %s:</string>
     <string name="please_fill_in_your_mailbox_information2">Inserisci i dati del tuo account:</string>
     <string name="please_wait">Attendi…</string>
@@ -683,7 +682,7 @@ CC: %4$s
     <string name="remove_star">Rimuovi da Speciali</string>
     <string name="reply">Rispondi</string>
     <string name="reply_all">Rispondi a tutti</string>
-    <string name="reply_attribution">Il %s, %s ha scritto:</string>
+    <string name="reply_attribution" formatted="false">Il %s, %s ha scritto:</string>
     <string name="reply_subject_label">Re:</string>
     <string name="replyto_heading">"Rispondi a: "</string>
     <string name="report">Rapporto</string>
@@ -758,7 +757,6 @@ CC: %4$s
     <string name="storage">Memoria</string>
     <string name="str_select_all">Seleziona tutto</string>
     <string name="str_select_none">Deseleziona tutto</string>
-    <string name="subject_and_snippet">%s — %s</string>
     <string name="subject_hint">Oggetto</string>
     <string name="suggestions_authority">com.android.mail.providers.SuggestionsProvider</string>
     <string name="swipe_down_to_refresh">Scorri in basso per aggiornare</string>
