--- a/Italian/main/PaymentService.apk/res/values-it/strings.xml
+++ b/Italian/main/PaymentService.apk/res/values-it/strings.xml
@@ -205,7 +205,7 @@ Verifica la data locale e prova di nuovo."</string>
     <string name="progress_warning_waiting">Il pagamento non ha ancora raggiunto il tuo conto.</string>
     <string name="progress_warning_check_with_contact">"Il pagamento non ha ancora raggiunto il tuo account. 
 Verificheremo di nuovo entro due giorni lavorativi.
-Centro assistenza clienti：400-100-5678"</string>
+Customer service center：400-100-5678"</string>
     <string name="btn_back">Indietro</string>
     <string name="btn_recharge_other">Ricarica</string>
     <string name="btn_call">Chiama</string>
