--- a/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
@@ -106,16 +106,16 @@
     <string name="status_bar_toggle_screen_button">Tasti</string>
     <string name="status_bar_toggle_screenshot">Screenshot</string>
     <string name="status_bar_toggle_shutdown">Spegni</string>
-    <string name="status_bar_toggle_sync">Sinc.</string>
+    <string name="status_bar_toggle_sync">Sincr.</string>
     <string name="status_bar_toggle_torch">Torcia</string>
     <string name="status_bar_toggle_vibrate">Vibra</string>
     <string name="status_bar_toggle_wifi">Wi-Fi</string>
-    <string name="status_bar_toggle_power_mode">Power mode</string>
+    <string name="status_bar_toggle_power_mode">Alimentazione</string>
     <string name="status_bar_toggle_drive_mode">Guida</string>
     <string name="status_bar_toggle_wifi_ap">Hospot Wi-Fi</string>
     <string name="status_bar_toggle_quiet_mode">Anti-disturbo</string>
-    <string name="status_bar_toggle_sync_auto">Sinc.Auto</string>
-    <string name="status_bar_toggle_sync_manual">Sinc.Man.</string>
+    <string name="status_bar_toggle_sync_auto">Sincr.Auto</string>
+    <string name="status_bar_toggle_sync_manual">Sincr.Man.</string>
     <string name="status_bar_toggle_syncing">Sincronizza</string>
     <string name="screen_rotation_freeze_message">Rotazione automatica disattivata</string>
     <string name="screen_button_disabled_message">I tasti funzione in basso sono bloccati. Puoi riabilitarli premendo \"Home\" e \"Power\"</string>
@@ -126,7 +126,7 @@
     <string name="share">Condividi</string>
     <string name="description_direction_up">Scorri su per %s.</string>
     <string name="description_direction_left">Scorri a sinistra per for %s.</string>
-    <string name="description_target_search">Search</string>
+    <string name="description_target_search">Cerca</string>
     <string name="status_bar_recent_memory_info1">"%s "</string>
     <string name="status_bar_recent_memory_info2">" %s disponibile"</string>
     <string name="usb_mode_notification">Archiviazione USB</string>
