--- a/Italian/main/miui.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/miui.apk/res/values-it-rIT/strings.xml
@@ -152,46 +152,57 @@
     <string name="thursday_shortest">G</string>
     <string name="friday_shortest">V</string>
     <string name="saturday_shortest">S</string>
-    <string name="the_eve_of_the_spring_festival">Vigiglia dello Spring Festival</string>
-    <string name="the_spring_festival">Spring Festival</string>
-    <string name="the_second_day">Secondo Giorno</string>
-    <string name="the_third_day">Third Day</string>
-    <string name="the_forth_day">Forth Day</string>
-    <string name="the_fifth_day">Fifth Day</string>
-    <string name="the_sixth_day">Sixth Day</string>
-    <string name="the_seventh_day">Seventh Day</string>
-    <string name="the_lantern_festival">Lantern Festival</string>
-    <string name="the_dragon_boat_festival">Dragon Boat Festival</string>
-    <string name="the_night_of_sevens">Night of Sevens</string>
-    <string name="the_spirit_festival">Spirit Festival</string>
-    <string name="the_mid_autumn_festival">Mid Autumn Festival</string>
-    <string name="the_double_ninth_festival">Double Ninth Festival</string>
-    <string name="the_water_lantern_festival">Water Lantern Festival</string>
-    <string name="the_laba_festival">Laba Festival</string>
-    <string name="the_new_years_day">New Years Day</string>
-    <string name="the_valentines_day">Valentines Day</string>
-    <string name="the_international_womens_day">Womens Day</string>
-    <string name="the_arbor_day">Arbor Day</string>
-    <string name="the_fools_day">Fools Day</string>
-    <string name="the_labour_day">Labour Day</string>
-    <string name="the_chinese_youth_day">Youth Day</string>
-    <string name="the_childrens_day">Childrens Day</string>
-    <string name="the_partys_day">Partys Day</string>
-    <string name="the_armys_day">Armys Day</string>
-    <string name="the_teachers_day">Teachers Day</string>
-    <string name="the_national_day">National Day</string>
-    <string name="the_christmas_day">Christmas Day</string>
-    <string name="the_peace_day">Peace Day</string>
-    <string name="the_anti_aggression_day">Anti-aggression Day</string>
-    <string name="the_tw_youth_day">Youth Day</string>
-    <string name="the_tw_childrens_day">Childrens Day</string>
-    <string name="the_anniversary_of_lifting_martial_law">Anniversary of Lifting Martial Law</string>
-    <string name="the_armed_forces_day">Armed Forces Day</string>
-    <string name="the_united_nations_day">United Nations Day</string>
-    <string name="the_retrocession_day">Retrocession Day</string>
-    <string name="the_national_father_day">National Father Day</string>
-    <string name="the_hksar_establishment_day">HKSAR Establishment Day</string>
-    <string name="the_easter_day">Easter Day</string>
+    <string name="name">Nome</string>
+    <string name="nickname">Nickname</string>
+    <string name="phone">Telefono</string>
+    <string name="email">Email</string>
+    <string name="organization">Organizzazione</string>
+    <string name="im">Im</string>
+    <string name="sip_phone">Telefono Sip</string>
+    <string name="birthday">Compleanno</string>
+    <string name="website">Sito</string>
+    <string name="address">Indirizzo</string>
+    <string name="note">Note</string>
+    <string name="the_eve_of_the_spring_festival"/>
+    <string name="the_spring_festival"/>
+    <string name="the_second_day"/>
+    <string name="the_third_day"/>
+    <string name="the_forth_day"/>
+    <string name="the_fifth_day"/>
+    <string name="the_sixth_day"/>
+    <string name="the_seventh_day"/>
+    <string name="the_lantern_festival"/>
+    <string name="the_dragon_boat_festival"/>
+    <string name="the_night_of_sevens"/>
+    <string name="the_spirit_festival"/>
+    <string name="the_mid_autumn_festival"/>
+    <string name="the_double_ninth_festival"/>
+    <string name="the_water_lantern_festival"/>
+    <string name="the_laba_festival"/>
+    <string name="the_new_years_day">Capodanno</string>
+    <string name="the_valentines_day">San Valentino</string>
+    <string name="the_international_womens_day">Festa delle donne</string>
+    <string name="the_arbor_day"/>
+    <string name="the_fools_day"/>
+    <string name="the_labour_day"/>
+    <string name="the_chinese_youth_day"/>
+    <string name="the_childrens_day"/>
+    <string name="the_partys_day"/>
+    <string name="the_armys_day"/>
+    <string name="the_teachers_day"/>
+    <string name="the_national_day"/>
+    <string name="the_christmas_day">Natale</string>
+    <string name="the_peace_day"/>
+    <string name="the_anti_aggression_day"/>
+    <string name="the_tw_youth_day"/>
+    <string name="the_tw_childrens_day"/>
+    <string name="the_anniversary_of_lifting_martial_law"/>
+    <string name="the_armed_forces_day">Festa delle forze armate</string>
+    <string name="the_united_nations_day">Festa unità nazionale</string>
+    <string name="the_retrocession_day"/>
+    <string name="the_national_father_day">Festa del papà</string>
+    <string name="the_hksar_establishment_day"/>
+    <string name="the_easter_day">Pasqua</string>
     <string name="fmt_time_millis">"S'ms'"</string>
     <string name="fmt_time_second">"s's'"</string>
     <string name="fmt_time_second_millis">"s.S's'"</string>
@@ -212,20 +223,20 @@
     <string name="fmt_time_24hour_minute_second_millis">H:mm:ss.S</string>
     <string name="fmt_date_numeric_day">d</string>
     <string name="fmt_date_numeric_month">M</string>
-    <string name="fmt_date_numeric_month_day">M-d</string>
+    <string name="fmt_date_numeric_month_day">d-M</string>
     <string name="fmt_date_numeric_year">yyyy</string>
-    <string name="fmt_date_numeric_year_month">yyyy-M</string>
-    <string name="fmt_date_numeric_year_month_day">yyyy-M-d</string>
+    <string name="fmt_date_numeric_year_month">M-yyyy</string>
+    <string name="fmt_date_numeric_year_month_day">d-M-yyyy</string>
     <string name="fmt_date_day">d</string>
     <string name="fmt_date_short_month">MMM</string>
-    <string name="fmt_date_short_month_day">MMM d</string>
+    <string name="fmt_date_short_month_day">d MMM</string>
     <string name="fmt_date_year">yyyy</string>
     <string name="fmt_date_short_year_month">MMM, yyyy</string>
-    <string name="fmt_date_short_year_month_day">MMM d, yyyy</string>
+    <string name="fmt_date_short_year_month_day">d MMM, yyyy</string>
     <string name="fmt_date_long_month">MMMM</string>
-    <string name="fmt_date_long_month_day">MMMM d</string>
+    <string name="fmt_date_long_month_day">d MMMM</string>
     <string name="fmt_date_long_year_month">MMMM, yyyy</string>
-    <string name="fmt_date_long_year_month_day">MMMM d, yyyy</string>
+    <string name="fmt_date_long_year_month_day">d MMMM, yyyy</string>
     <string name="fmt_weekday_short">E</string>
     <string name="fmt_weekday_long">EEEE</string>
     <string name="fmt_timezone">z</string>
